--- a/Makefile.travis
+++ b/Makefile.travis
@@ -7,7 +7,7 @@ export
 .PHONY: before_install install script after_success
 
 before_install:
-	-git fetch --unshallow
+	-git fetch --tags
 ifeq ($(TRAVIS_OS_NAME),linux)
 	make docker_prepare
 endif
